<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow>

        <AnalogClock
            android:id="@+id/reloj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <CheckBox
            android:id="@+id/checkPrueba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_checkbox" />

        <Button
            android:id="@+id/botonPrueba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_main" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/etiquetaPrueba"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_label" />
    </TableRow>

</TableLayout>