<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AnalogClock
        android:id="@+id/reloj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"/>

    <CheckBox
        android:id="@+id/checkPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_checkbox"
        android:layout_row="1"
        android:layout_column="0"/>

    <Button
        android:id="@+id/botonPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main"
        android:layout_row="1"
        android:layout_column="1"/>

    <TextView
        android:id="@+id/etiquetaPrueba"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_label"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"/>

</GridLayout>