<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AnalogClock
        android:id="@+id/reloj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true" />

    <CheckBox
        android:id="@+id/checkPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_checkbox"
        android:layout_below="@+id/reloj"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/botonPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main"
        android:layout_below="@+id/reloj"
        android:layout_toRightOf="@+id/checkPrueba"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/etiquetaPrueba"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_label"
        android:layout_below="@+id/botonPrueba" />

</RelativeLayout>